<resources>
    <string name="app_name">编辑Demo</string>
    <string name="edit_nav_edit">编辑</string>
    <string name="edit_nav_save_and_share">保存／分享></string>
    <string name="effect_mananger_nav_edit">特效管理</string>
    <string name="motion_sticker_effect_manager">动图</string>
    <string name="subtitle_effect_manager">字幕</string>
    <string name="font_effect_manager">字体</string>
    <string name="mv_effect_manager">MV</string>
    <string name="music_effect_manager">音乐</string>
    <string name="music_origin">原音</string>
    <string name="my_music">我的音乐</string>
    <string name="local_music">本地音乐</string>
    <string name="delete_effect_manager">删除</string>
    <string name="use_effect_edit">使用</string>
    <string name="download_effect_edit">下载</string>
    <string name="cancel_more_mv_edit">取消</string>
    <string name="more_motion_sticker_nav_edit">更多动图</string>
    <string name="more_caption_nav_edit">更多字幕</string>
    <string name="more_mv_nav_edit">更多MV</string>
    <string name="qupai_text_count_outof">字数超出限制</string>
    <string name="none_effect">原片</string>
    <string name="more">更多</string>
    <string name="timeline_curr_time">%1$02d:%2$02d</string>
    <string name="material_downloading_failure">素材下载失败！</string>
    <string name="res_copy">资源拷贝中</string>
    <string name="transcode">转码中</string>
    <string name="empty_music">无音乐</string>
    <string name="mv_message">请先移除MV效果再添加音乐</string>
    <string name="cancel">取消</string>
    <string name="has_no_network">网络不给力，请检查网络</string>
    <string name="no_free_memory">剩余磁盘空间不足</string>
    <string name="play_video_error">该视频为错误视频</string>
    <string name="not_supported_audio">不支持的音频格式</string>
    <string name="not_supported_video">不支持的视频格式</string>
    <string name="not_supported_pixel_format">不支持的文件</string>

    <string name="publish">发布</string>
    <string name="video_composeing_cancel_or_go">正在进行视频合成，确定要放弃合成吗？</string>
    <string name="goback_to_editor">返回编辑</string>
    <string name="go_ahead_compose">继续合成</string>
    <string name="select_cover">选择封面</string>
    <string name="composing">视频合成中</string>
    <string name="not_shutdown_app">请不要关闭应用</string>
    <string name="uploading">正在上传 0%</string>
    <string name="countoflimit">最多不超过20个字</string>
    <string name="compose_success">合成成功</string>
    <string name="compose_failed">合成失败</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="backtoeditorandtryagain">请返回编辑稍后再试</string>
    <string name="input_video_desc">你可以在合成中添加视频描述...</string>
    <string name="edit_cover">选择封面</string>
    <string name="my_video">我的视频</string>
    <string name="aliyun_svideo_filter">滤镜</string>
    <string name="aliyun_svideo_effect">特效</string>
    <string name="aliyun_svideo_time_effect_moment">某刻</string>
    <string name="aliyun_svideo_time_effect_all">全程</string>
    <string name="aliyun_svideo_time_effect_not_support">时间特效不支持多段视频</string>
    <string name="aliyun_svideo_editor_init_failed">编辑器初始化失败</string>

    <string name="add_music_start_time">开始时间(ms)</string>
    <string name="add_music_end_time">结束时间(ms)</string>
    <string name="add_music_play_time">播放时间</string>
    <string name="add_music_audio_time">音频时间</string>
</resources>

