<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tab_bg_color_50pct"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/play_time_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_music_play_time"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/white"/>
        <EditText
            android:id="@+id/play_time_start"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:hint="@string/add_music_start_time"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:inputType="number"
            android:textColorHint="@color/white"
            />
        <EditText
            android:id="@+id/play_time_end"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:hint="@string/add_music_end_time"
            android:textSize="15sp"
            android:inputType="number"
            android:textColorHint="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/stream_time_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_music_audio_time"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/white"/>
        <EditText
            android:id="@+id/stream_time_start"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textSize="15sp"
            android:hint="@string/add_music_start_time"
            android:textColor="@color/white"
            android:inputType="number"
            android:textColorHint="@color/white"
            />
        <EditText
            android:id="@+id/stream_time_end"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textSize="15sp"
            android:hint="@string/add_music_end_time"
            android:textColor="@color/white"
            android:inputType="number"
            android:textColorHint="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/action_bar_bg_50pct">
        <ImageView
            android:id="@+id/voice_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/aliyun_svideo_music_voice_selector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/music_origin"/>
        <SeekBar
            android:id="@+id/music_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxHeight="5dp"
            android:minHeight="5dp"
            android:progress="50"
            android:progressDrawable="@drawable/aliyun_svideo_music_seekbar_drawable"
            android:thumb="@drawable/aliyun_svideo_seekbar_thum"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tab_indicator_color"
            android:text="@string/music_effect_manager"/>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/music_content_container"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </android.support.v4.view.ViewPager>
    <com.aliyun.quview.PagerSlidingTabStrip
        android:id="@+id/music_content_container_indicator"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:pstsShouldExpand="true"
        app:pstsIndicatorColor="@color/tab_indicator_color"
        app:pstsDividerColor="@color/aliyun_transparent"
        app:pstsUnderlineColor="@color/aliyun_transparent"
        app:pstsTabBackground="@color/aliyun_transparent"
        android:background="@color/action_bar_bg">
    </com.aliyun.quview.PagerSlidingTabStrip>

</LinearLayout>
